// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderer should render argument name 1`] = `
<code
  className="name"
>
  Foo
</code>
`;

exports[`renderer should render deprecated argument name 1`] = `
<code
  className="name isDeprecated"
>
  Foo
</code>
`;
